# stock-market-analytics

./: .gitignore  README.md  ingest.py  load.py  pyproject.toml
airflow/: Dockerfile  docker-compose.yaml  requirements.txt
airflow/dags/: stock_pipeline.py
data/: sector_performance.csv  stock-market-analytics.pbix  volatility.csv
dbt/: .gitignore  .user.yml  profiles.yml
dbt/stock_market_analytics/: dbt_project.yml
dbt/stock_market_analytics/macros/: get_daily_return.sql
dbt/stock_market_analytics/models/marts/: mart_sector_performance.sql  mart_stock_volatility.sql
dbt/stock_market_analytics/models/staging/: sources.yml  stg_stocks.sql  stg_tickers.sql
dbt/stock_market_analytics/tests/: close_test.sql  high_vs_low_test.sql  negative_test.sql  open_test.sql
terraform/: main.tf  outputs.tf  variables.tf
