[project]
name = "stock-market-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google>=3.0.0",
    "google-cloud>=0.34.0",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-storage>=3.10.1",
    "lxml>=6.0.2",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "yfinance>=1.2.0",
]
